# matrix

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: pypi_pushing.yml  python-test.yml
matrix_class/: matrix.py
src/: __init__.py
tests/tests_matrix/: test_det.py  test_inverse.py  test_matrix.py  test_mul.py
